--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,5 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "MRTK_Tutorial.slnx"
+    "dotnet.defaultSolution": "AR_Capstone_project.slnx"
 }
